--- a/assets/scss/import/_variables.scss
+++ b/assets/scss/import/_variables.scss
@@ -31,6 +31,7 @@ $base-z-index: 0;
 // Colors
 $orange: #ffae00;
 $orange-dark: #9a5600;
+$orange-med: #cf722a;
 $yellow: #fb8c00;
 $red: red;
 $blue: #00acc1;
@@ -42,11 +43,12 @@ $green-dark: #8bab00;
 
 $gray-medium: #e8e8e8;
 $gray-dark: #333;
+
 $gray-light: #ddd;
 $green-gradient: linear-gradient(to bottom, rgba(#bdc901, 1) 0%, rgba(#8aab00, 1) 50%, rgba(#8aab00, 1) 100% );
 $green-btn-gradient: linear-gradient(to bottom, rgba(#8aab00, 1) 0%, rgba(#bdc901, 1) 30%, rgba(#8aab00, 1) 60%, rgba(#8aab00, 1) 100% );
 
-$violet-gradient: linear-gradient(to bottom, rgba(#cd43e3, 1) 0%, rgba(#8e24aa, 1) 50%, rgba(#8e24aa, 1) 100% );
+$violet-gradient: linear-gradient(to bottom, rgba(#cd43e3, .7) 0%, rgba(#8e24aa, .7) 50%, rgba(#8e24aa, .7) 100% );
 $violet-btn-gradient: linear-gradient(to bottom, rgba(#8e24aa, 1) 0%, rgba(#cd43e3, 1) 30%, rgba(#8e24aa, 1) 100% );
 
 $gray-gradient: linear-gradient(to bottom, rgba(#ffffff, .8) 0%, rgba(#e8e8e8, 1) 90%, rgba(#e8e8e8, 1) 100% );
