--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,7 +17,9 @@
 @import 'gulp_png_sprite';
 
 
-
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: $base-font-family;
@@ -121,6 +123,19 @@ picture {
   flex-flow: row wrap;
   align-items: center;
 }
+
+.acf-map {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+  border: 0;
+  img {
+    max-width: inherit !important;
+  }
+}
+
 
 header {
   background: $gray-gradient;
@@ -321,7 +336,8 @@ nav {
         background-color: $orange-med;
       }
     }
-    &.current-menu-item {
+    &.active,
+    &.current-menu-item:not(.scroll) {
       position: relative;
       &:before {
         opacity: 1;
@@ -347,11 +363,503 @@ article {
   @extend .clearfix;
 }
 
+#introduction {
+  margin-bottom: 50px;
+  padding-top: 3%;
+
+  background: url(../img/bg-home-content.jpg) no-repeat center top;
+  background-size: 1920px auto;
+}
+
+.int-content {
+  position: relative;
+
+  text-align: center;
+
+  color: #fff;
+  text-shadow: $text-shadow;
+  .int-title {
+    font-family: 'Leokadia Deco';
+    font-size: 89px;
+
+    position: relative;
+
+    margin-bottom: 120px;
+    &:before {
+      position: absolute;
+      bottom: -75px;
+      left: 50%;
+
+      display: inline-block;
+
+      width: 300px;
+      height: 52px;
+      margin: 0 -150px;
+
+      content: '';
+      pointer-events: none;
+
+      background-image: url(../img/decor-title-big.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+    span {
+      font-size: 67px;
+
+      display: inline-block;
+
+      width: 100%;
+    }
+  }
+  .int-desc {
+    font-size: 28px;
+
+    margin-bottom: 30px;
+  }
+  .int-small-desc {
+    font-size: 21px;
+
+    margin-bottom: 30px;
+  }
+}
+
+
+
+.course-item-wrap.first-item {
+  margin-bottom: 50px;
+}
+
+
+.course-item {
+  display: flex;
+
+  min-height: 100%;
+
+  background: #fafafa;
+
+  flex-flow: row wrap;
+
+  .course-img {
+    height: 300px;
+
+    border: 2px solid #fafafa;
+    background-color: #fafafa;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .course-content-wrap {
+    position: relative;
+
+    padding-top: 80px;
+
+    background: #fafafa;
+
+    align-self: stretch;
+  }
+
+  .course-title {
+    position: absolute;
+    top: -50px;
+    right: 0;
+    left: 80px;
+
+    display: inline-block;
+
+    width: auto;
+
+    color: #fff;
+    text-shadow: $text-shadow;
+
+
+    .course-label {
+      font-size: 16px;
+
+      position: absolute;
+      bottom: 100%;
+      left: 0;
+
+      display: inline-block;
+
+      padding: 12px 20px;
+
+      text-align: center;
+      text-transform: uppercase;
+    }
+    .course-type {
+      font-size: 37px;
+      font-weight: 500;
+      line-height: 80px;
+
+      position: relative;
+
+      display: inline-block;
+
+      height: 80px;
+      padding: 0 20px;
+
+      text-align: left;
+      vertical-align: middle;
+      text-transform: uppercase;
+       > span {
+        font-size: 28px;
+        font-weight: bold;
+        line-height: 1.2;
+
+        display: inline-block;
+
+        width: 100%;
+        padding-top: 5px;
+        //height: 80px;
+         > span {
+          font-weight: 400;
+
+          display: inline-block;
+
+          width: 100%;
+        }
+      }
+    }
+    .course-icon {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -80px;
+
+      display: inline-block;
+
+      width: 80px;
+
+      content: '';
+      pointer-events: none;
+
+      background-color: $yellow;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 80% auto;
+    }
+  }
+
+  .course-content {
+    display: flex;
+
+    min-height: 100%;
+    padding-bottom: 20px;
+
+    flex-flow: column nowrap;
+    justify-content: space-between;
+  }
+  .course-desc {
+    //display: inline-block;
+    //width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .course-content-bottom {
+    position: relative;
+    &:before {
+      position: absolute;
+      top: -30px;
+      left: 0;
+
+      display: inline-block;
+
+      width: 100%;
+      height: 33px;
+
+      content: '';
+      pointer-events: none;
+
+      background-image: url(../img/decor-border.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
+  }
+
+
+  .course-duration,
+  .course-price {
+    display: inline-block;
+    float: left;
+
+    width: 50%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    text-align: center;
+    .label {
+      display: inline-block;
+
+      width: 100%;
+    }
+    .value {
+      display: inline-block;
+
+      width: 100%;
+    }
+    .unit {
+      display: inline-block;
+
+      width: 100%;
+    }
+  }
+  .course-duration {
+    position: relative;
+    &:before {
+      position: absolute;
+      top: 20px;
+      bottom: 20px;
+      left: 0;
+
+      display: inline-block;
+
+      width: 1px;
+
+      content: '';
+
+      background: $green-light;
+    }
+  }
+  .btn,
+  .more-link {
+    float: left;
+
+    width: 50%;
+    margin: 0;
+  }
+
+
+
+  &:not(.courses-first) {
+    box-shadow: $base-box-shadow;
+    .course-content-wrap {
+      //margin-top: -50px;
+    }
+    .course-content {
+      //margin-top: -50px;
+    }
+    .course-title {
+      //left: 70px;
+
+      //width: calc(100% - 60px);
+      .course-label {
+        //
+      }
+      .course-type {
+        //
+      }
+      .course-icon {
+        //
+      }
+    }
+  }
+
+  &.courses-first {
+    position: relative;
+    z-index: 1;
+
+    margin-right: 0;
+    margin-left: 0;
+    &:before {
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      right: -5.9%;
+      bottom: -65px;
+      left: -5.9%;
+
+      display: inline-block;
+
+      content: '';
+      pointer-events: none;
+
+      background-image: url(../img/content-shadow.png);
+      background-repeat: no-repeat;
+      background-position: center bottom;
+      background-size: 100% auto;
+    }
+    .course-img {
+      height: auto;
+      min-height: 100%;
+    }
+    .course-content-wrap {
+      padding-top: 180px;
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    .course-title {
+      position: absolute;
+      top: 70px;
+      left: 20px;
+    }
+    .course-content {
+      height: 100%;
+    }
+  }
+  &.blue {
+    .course-label {
+      background: $blue-dark;
+    }
+
+    .course-title {
+      background: $blue;
+    }
+    .course-duration,
+    .course-price {
+      .value {
+        color: $blue;
+      }
+    }
+  }
+  &.orange {
+    .course-label {
+      background: $orange-dark;
+    }
+
+    .course-title {
+      background: $orange;
+    }
+    .course-duration,
+    .course-price {
+      .value {
+        color: $orange;
+      }
+    }
+  }
+  &.violet {
+    .course-label {
+      background: $violet-dark;
+    }
+
+    .course-title {
+      background: $violet;
+    }
+    .course-duration,
+    .course-price {
+      .value {
+        color: $violet;
+      }
+    }
+  }
+}
+
+
+
+
+.home-video--item {
+  position: relative;
+
+  min-height: 530px;
+  //height: auto;
+  //margin-bottom: 100px;
+  //padding-right: 0;
+  //padding-left: 0;
+
+  text-align: center;
+
+  background: #000;
+  box-shadow: $base-box-shadow;
+  iframe {
+    display: inline-block;
+
+    width: 100%;
+    height: 100%;
+  }
+
+  .videoholder {
+    position: relative;
+    z-index: 1;
+
+    display: inline-block;
+
+    width: 100%;
+    height: 100%;
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    &:before,
+    &:after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      display: block;
+      overflow: hidden;
+
+      content: '';
+      cursor: pointer;
+      transition: $base-transition;
+    }
+    &:before {
+      position: absolute;
+      z-index: 3;
+      top: 50%;
+      left: 50%;
+
+      width: 100px;
+      height: 100px;
+      margin-top: -50px;
+      margin-left: -50px;
+
+      pointer-events: none;
+
+      border: 1px solid #fff;
+      border-radius: 50%;
+      //background-image: url(../img/home-video--item.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    &:after {
+      z-index: 2;
+
+      transition: all .3s;
+
+      opacity: .6;
+      //background: $base-gradient;
+    }  &.play,
+    &:visited,
+    &:hover {
+      //&:before,
+      &:after {
+        opacity: 0;
+      }
+    }
+  }
+  .video-title {
+    font-size: 28px;
+    font-weight: bold;
+
+    position: absolute;
+    z-index: 8;
+    right: 5%;
+    bottom: 10%;
+    left: 5%;
+
+    display: inline-block;
+
+    text-align: left;
+
+    color: #fff;
+  }
+}
+
+.home-contacts--map {
+  display: inline-block;
+
+  width: 100%;
+  height: 40vw;
+}
+
+
+
 
 footer {
   //height: $footer;
   //margin: $footer_margin auto 0;
-
   background-color: $gray-light;
 }
 
