new front, calendar ready

--- a/assets/scss/import/_buttons.scss
+++ b/assets/scss/import/_buttons.scss
@@ -5,13 +5,15 @@ input[type='reset'],
 input[type='submit'],
 button {
   font-family: $base-font-family;
-  font-size: $base-font-size;
-  font-weight: 600;
-  line-height: 1;
+  font-size: 21px;
+  //font-weight: 600;
+  line-height: 60px;
 
   display: inline-block;
 
-  padding: .75em 1em;
+  height: 60px;
+  //padding: .75em 1em;
+  padding: 0 25px;
 
   cursor: pointer;
   user-select: none;
@@ -20,6 +22,7 @@ button {
   vertical-align: middle;
   white-space: nowrap;
   text-decoration: none;
+  text-transform: uppercase;
 
   color: #fff;
   border: none;
@@ -28,6 +31,7 @@ button {
   //background: $green;
   background-position: 0 70%;
   background-size: auto 150%;
+  text-shadow: $text-shadow;
   //box-shadow: $btn-shadow;
 
   -webkit-font-smoothing: antialiased;
@@ -69,9 +73,24 @@ button {
   border-radius: 100%;
   background: url(../img/ico-phone.png) no-repeat center center, $green;
   background-size: 70% auto;
-  box-shadow: 0px 2px 5px -1px rgba(#ccc, .7), inset 0px 2px 5px -1px rgba(#000, .6);
+  box-shadow: 0 2px 5px -1px rgba(#ccc, .7), inset 0 2px 5px -1px rgba(#000, .6);
   &:hover {
     background-position: center center;
-    box-shadow: 0px 2px 5px -2px rgba(#000, .4), inset 0px 2px 4px -1px rgba(#fff, .4);
+    box-shadow: 0 2px 5px -2px rgba(#000, .4), inset 0 2px 4px -1px rgba(#fff, .4);
+  }
+}
+
+.more-link {
+  font-size: $base-font-size;
+
+  text-align: center;
+
+  color: #000;
+  background: $gray-medium;
+  text-shadow: none;
+  &:hover {
+    color: #fff;
+    background: $yellow;
+    text-shadow: $text-shadow;
   }
 }
