--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -431,11 +431,11 @@ input[type='reset'],
 input[type='submit'],
 button {
   font-family: "PF Agora Slab Pro", Open-sans;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 1;
+  font-size: 21px;
+  line-height: 60px;
   display: inline-block;
-  padding: .75em 1em;
+  height: 60px;
+  padding: 0 25px;
   cursor: pointer;
   user-select: none;
   transition: background-color 750ms ease, color 105ms ease, opacity 45ms ease;
@@ -443,12 +443,14 @@ button {
   vertical-align: middle;
   white-space: nowrap;
   text-decoration: none;
+  text-transform: uppercase;
   color: #fff;
   border: none;
   border-radius: 0;
   background: linear-gradient(to bottom, #8aab00 0%, #bdc901 30%, #8aab00 60%, #8aab00 100%);
   background-position: 0 70%;
   background-size: auto 150%;
+  text-shadow: 0 4px 9px rgba(50, 50, 50, 0.8);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -520,12 +522,26 @@ button.btn-violet:focus {
   border-radius: 100%;
   background: url(../img/ico-phone.png) no-repeat center center, #8bab00;
   background-size: 70% auto;
-  box-shadow: 0px 2px 5px -1px rgba(204, 204, 204, 0.7), inset 0px 2px 5px -1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 2px 5px -1px rgba(204, 204, 204, 0.7), inset 0 2px 5px -1px rgba(0, 0, 0, 0.6);
 }
 
 .callback:hover {
   background-position: center center;
-  box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.4), inset 0px 2px 4px -1px rgba(255, 255, 255, 0.4);
+  box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.4), inset 0 2px 4px -1px rgba(255, 255, 255, 0.4);
+}
+
+.more-link {
+  font-size: 16px;
+  text-align: center;
+  color: #000;
+  background: #e8e8e8;
+  text-shadow: none;
+}
+
+.more-link:hover {
+  color: #fff;
+  background: #ffae00;
+  text-shadow: 0 4px 9px rgba(50, 50, 50, 0.8);
 }
 
 fieldset {
@@ -6191,10 +6207,6 @@ html {
   }
 }
 
-* {
-  box-sizing: border-box;
-}
-
 body {
   font-family: "PF Agora Slab Pro", Open-sans;
   font-size: 16px;
@@ -6205,6 +6217,10 @@ body {
   color: #333;
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h1,
@@ -6489,7 +6505,7 @@ nav ul li {
   margin-bottom: 50px;
   padding-top: 3%;
   background: url(../img/bg-home-content.jpg) no-repeat center top;
-  background-size: 1920px auto;
+  background-size: 100% auto;
 }
 
 .int-content {
@@ -6623,7 +6639,7 @@ nav ul li {
   width: 80px;
   content: '';
   pointer-events: none;
-  background-color: #fb8c00;
+  background-color: #ffae00;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 80% auto;
@@ -6668,22 +6684,29 @@ nav ul li {
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .course-item .course-duration .label,
 .course-item .course-price .label {
+  font-size: 16px;
   display: inline-block;
   width: 100%;
+  margin-bottom: 8px;
 }
 
 .course-item .course-duration .value,
 .course-item .course-price .value {
+  font-size: 50px;
+  font-weight: 500;
   display: inline-block;
   width: 100%;
+  margin-bottom: 8px;
 }
 
 .course-item .course-duration .unit,
 .course-item .course-price .unit {
+  font-weight: 300;
   display: inline-block;
   width: 100%;
 }
@@ -6694,8 +6717,8 @@ nav ul li {
 
 .course-item .course-duration:before {
   position: absolute;
-  top: 20px;
-  bottom: 20px;
+  top: 25px;
+  bottom: 25px;
   left: 0;
   display: inline-block;
   width: 1px;
@@ -6703,11 +6726,19 @@ nav ul li {
   background: #d8de6d;
 }
 
-.course-item .btn,
+.course-item .btn {
+  float: left;
+  width: 60%;
+  margin: 0;
+  padding: 0 15px;
+}
+
 .course-item .more-link {
   float: left;
-  width: 50%;
+  width: 40%;
+  min-height: 100%;
   margin: 0;
+  padding: 0 15px;
 }
 
 .course-item:not(.courses-first) {
@@ -6771,17 +6802,25 @@ nav ul li {
   color: #00acc1;
 }
 
+.course-item.blue .more-link:hover {
+  background: #00acc1;
+}
+
 .course-item.orange .course-label {
   background: #9a5600;
 }
 
 .course-item.orange .course-title {
-  background: #ffae00;
+  background: #fb8c00;
 }
 
 .course-item.orange .course-duration .value,
 .course-item.orange .course-price .value {
-  color: #ffae00;
+  color: #fb8c00;
+}
+
+.course-item.orange .more-link:hover {
+  background: #fb8c00;
 }
 
 .course-item.violet .course-label {
@@ -6795,6 +6834,313 @@ nav ul li {
 .course-item.violet .course-duration .value,
 .course-item.violet .course-price .value {
   color: #8e24aa;
+}
+
+.course-item.violet .more-link:hover {
+  background: #8e24aa;
+}
+
+.section-title {
+  font-size: 50px;
+  position: relative;
+  margin-bottom: 100px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.section-title:before {
+  position: absolute;
+  bottom: -60px;
+  left: 50%;
+  display: inline-block;
+  width: 190px;
+  height: 32px;
+  margin: 0 -95px;
+  content: '';
+  background: url(../img/decor-title-big.png) no-repeat center top;
+  background-size: contain;
+}
+
+#calendar {
+  overflow: hidden;
+  padding-top: 40px;
+  transition: all .3s;
+  background: url(../img/bg-raspisanie.jpg) no-repeat center top;
+  background-size: cover;
+}
+
+.cal-tab-nav {
+  margin-bottom: 45px;
+}
+
+.cal-tab-nav .tab-nav-item {
+  position: relative;
+  z-index: 2;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background: rgba(0, 172, 193, 0.7);
+  text-shadow: 0 4px 9px rgba(50, 50, 50, 0.8);
+}
+
+.cal-tab-nav .tab-nav-item .icon {
+  width: 58px;
+  height: 58px;
+  margin: 0 auto 10px auto;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+}
+
+.cal-tab-nav .tab-nav-item .label {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.cal-tab-nav .tab-nav-item .title {
+  font-size: 21px;
+  font-weight: 500;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.cal-tab-nav .tab-nav-item .days {
+  font-size: 21px;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
+.cal-tab-nav .tab-nav-item .days span {
+  position: relative;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.cal-tab-nav .tab-nav-item .days span:not(:first-child) {
+  margin-left: 30px;
+}
+
+.cal-tab-nav .tab-nav-item .days span:not(:first-child):before {
+  font-size: 16px;
+  position: absolute;
+  top: 3px;
+  left: -17px;
+  display: inline-block;
+  width: 6px;
+  height: auto;
+  margin: 0 -3px;
+  content: '♦';
+  text-align: center;
+}
+
+.cal-tab-nav .tab-nav-item:before {
+  position: absolute;
+  top: calc(100% - 25px);
+  left: 50%;
+  display: inline-block;
+  width: 50px;
+  height: 20px;
+  margin: -.5px -25px 0 -25px;
+  content: '';
+  transition: all .3s;
+  pointer-events: none;
+  opacity: 0;
+  background: rgba(0, 172, 193, 0.7);
+  -webkit-clip-path: polygon(50% 50%, 0 0, 100% 0);
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
+}
+
+.cal-tab-nav .tab-nav-item:first-child:after {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  right: 100%;
+  bottom: 0;
+  left: -9999px;
+  display: inline-block;
+  content: '';
+  pointer-events: none;
+  background: rgba(0, 172, 193, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item:last-child:after {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  right: -9999px;
+  bottom: 0;
+  left: 100%;
+  display: inline-block;
+  content: '';
+  pointer-events: none;
+  background: rgba(0, 172, 193, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item:hover:before, .cal-tab-nav .tab-nav-item.active:before {
+  top: 100%;
+  opacity: 1;
+}
+
+.cal-tab-nav .tab-nav-item.orange {
+  background: rgba(251, 140, 0, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item.orange:before {
+  background: rgba(251, 140, 0, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item.orange:first-child:after, .cal-tab-nav .tab-nav-item.orange:last-child:after {
+  background: rgba(251, 140, 0, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item.violet {
+  background: rgba(142, 36, 170, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item.violet:before {
+  background: rgba(142, 36, 170, 0.7);
+}
+
+.cal-tab-nav .tab-nav-item.violet:first-child:after, .cal-tab-nav .tab-nav-item.violet:last-child:after {
+  background: rgba(142, 36, 170, 0.7);
+}
+
+.tab-item-slider {
+  padding-bottom: 60px;
+}
+
+.tab-item-slider .owl-stage {
+  display: flex;
+  margin: 0 auto;
+  flex-flow: row wrap;
+  align-items: stretch;
+}
+
+.tab-item-slider .calendar-list-item {
+  min-height: 100%;
+}
+
+.tab-item-slider .owl-dots {
+  position: absolute;
+  z-index: 3;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  text-align: center;
+}
+
+.tab-item-slider .owl-dots .owl-dot {
+  width: 15px;
+  height: 15px;
+  margin: 0 5px;
+  opacity: .8;
+  border: 1px solid #cf722a;
+  border-radius: 50%;
+  outline: 0;
+  background: transparent;
+}
+
+.tab-item-slider .owl-dots .owl-dot:first-child {
+  margin-left: auto;
+}
+
+.tab-item-slider .owl-dots .owl-dot:last-child {
+  margin-right: auto;
+}
+
+.tab-item-slider .owl-dots .owl-dot:hover, .tab-item-slider .owl-dots .owl-dot.active {
+  border-color: #d8de6d;
+  background: #d8de6d;
+}
+
+.tab-item-slider .owl-dots .owl-dot:hover {
+  opacity: 1;
+}
+
+.tab-item-slider .owl-dots .owl-dot:active, .tab-item-slider .owl-dots .owl-dot:focus, .tab-item-slider .owl-dots .owl-dot:hover {
+  outline: 0;
+}
+
+.tab-item-slider:not(.active).owl-loaded {
+  position: absolute !important;
+}
+
+.calendar-list-item {
+  position: relative;
+  z-index: 2;
+  padding: 30px 10px 40px 10px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-shadow: 0 4px 9px rgba(50, 50, 50, 0.8);
+}
+
+.calendar-list-item:before {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  content: '';
+  background: rgba(41, 114, 125, 0.7);
+}
+
+.calendar-list-item .date-wrap {
+  margin-bottom: 25px;
+  padding-bottom: 30px;
+  background: url(../img/decor-title-white.png) no-repeat center bottom;
+  background-size: auto;
+}
+
+.calendar-list-item .date-wrap .year {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.calendar-list-item .date-wrap .date {
+  font-size: 50px;
+  font-weight: 500;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.calendar-list-item .date-wrap .day {
+  display: inline-block;
+  width: 100%;
+}
+
+.calendar-list-item .label {
+  font-weight: bold;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.calendar-list-item .title {
+  font-size: 21px;
+  display: inline-block;
+  width: 100%;
+}
+
+.calendar-list-item.orange:before {
+  background: rgba(231, 108, 71, 0.7);
+}
+
+.calendar-list-item.violet:before {
+  background: rgba(200, 61, 110, 0.7);
 }
 
 .home-video--item {
@@ -6884,13 +7230,13 @@ footer {
   background-color: #ddd;
 }
 
-@media (min-width: 1350px) {
+@media (min-width: 1500px) {
   .container {
     max-width: 1260px;
   }
 }
 
-@media (max-width: 1349px) {
+@media (max-width: 1500px) {
   .callback {
     width: 50px;
     height: 50px;
