--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,9 +17,7 @@
 @import 'gulp_png_sprite';
 
 
-* {
-  box-sizing: border-box;
-}
+
 
 body {
   font-family: $base-font-family;
@@ -36,6 +34,11 @@ body {
 
   -webkit-font-smoothing: antialiased;
 }
+
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -368,7 +371,7 @@ article {
   padding-top: 3%;
 
   background: url(../img/bg-home-content.jpg) no-repeat center top;
-  background-size: 1920px auto;
+  background-size: 100% auto;
 }
 
 .int-content {
@@ -588,17 +591,27 @@ article {
     padding-bottom: 20px;
 
     text-align: center;
+    text-transform: uppercase;
     .label {
+      font-size: 16px;
+
       display: inline-block;
 
       width: 100%;
+      margin-bottom: 8px;
     }
     .value {
+      font-size: 50px;
+      font-weight: 500;
+
       display: inline-block;
 
       width: 100%;
+      margin-bottom: 8px;
     }
     .unit {
+      font-weight: 300;
+
       display: inline-block;
 
       width: 100%;
@@ -608,8 +621,8 @@ article {
     position: relative;
     &:before {
       position: absolute;
-      top: 20px;
-      bottom: 20px;
+      top: 25px;
+      bottom: 25px;
       left: 0;
 
       display: inline-block;
@@ -621,12 +634,20 @@ article {
       background: $green-light;
     }
   }
-  .btn,
+  .btn {
+    float: left;
+
+    width: 60%;
+    margin: 0;
+    padding: 0 15px;
+  }
   .more-link {
     float: left;
 
-    width: 50%;
+    width: 40%;
+    min-height: 100%;
     margin: 0;
+    padding: 0 15px;
   }
 
 
@@ -711,6 +732,11 @@ article {
         color: $blue;
       }
     }
+    .more-link {
+      &:hover {
+        background: $blue;
+      }
+    }
   }
   &.orange {
     .course-label {
@@ -724,6 +750,11 @@ article {
     .course-price {
       .value {
         color: $orange;
+      }
+    }
+    .more-link {
+      &:hover {
+        background: $orange;
       }
     }
   }
@@ -741,8 +772,369 @@ article {
         color: $violet;
       }
     }
+    .more-link {
+      &:hover {
+        background: $violet;
+      }
+    }
   }
 }
+
+
+.section-title {
+  font-size: 50px;
+
+  position: relative;
+
+  margin-bottom: 100px;
+
+  text-align: center;
+  text-transform: uppercase;
+  &:before {
+    position: absolute;
+    bottom: -60px;
+    left: 50%;
+
+    display: inline-block;
+
+    width: 190px;
+    height: 32px;
+    margin: 0 -95px;
+
+    content: '';
+
+    background: url(../img/decor-title-big.png) no-repeat center top;
+    background-size: contain;
+  }
+}
+
+#calendar {
+  overflow: hidden;
+
+  padding-top: 40px;
+
+  transition: all .3s;
+
+  background: url(../img/bg-raspisanie.jpg) no-repeat center top;
+  background-size: cover;
+}
+
+
+
+
+.cal-tab-nav {
+  margin-bottom: 45px;
+  .tab-nav-item {
+    position: relative;
+    z-index: 2;
+
+    padding-top: 20px;
+    padding-bottom: 30px;
+
+    text-align: center;
+    text-transform: uppercase;
+
+    color: #fff;
+    background: rgba($blue, .7);
+    text-shadow: $text-shadow;
+    .icon {
+      width: 58px;
+      height: 58px;
+      margin: 0 auto 10px auto;
+
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain;
+    }
+    .label {
+      display: inline-block;
+
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    .title {
+      font-size: 21px;
+      font-weight: 500;
+
+      display: inline-block;
+
+      width: 100%;
+      margin-bottom: 30px;
+    }
+    .days {
+      font-size: 21px;
+
+      display: inline-block;
+
+      width: 100%;
+
+      text-align: center;
+      span {
+        position: relative;
+
+        display: inline-block;
+
+        margin: 0 auto;
+
+        &:not(:first-child) {
+          margin-left: 30px;
+          &:before {
+            font-size: 16px;
+
+            position: absolute;
+            top: 3px;
+            left: -17px;
+
+            display: inline-block;
+
+            width: 6px;
+            height: auto;
+            margin: 0 -3px;
+
+            content: '♦';
+            text-align: center;
+          }
+        }
+      }
+    }
+    &:before {
+      position: absolute;
+      top: calc(100% - 25px);
+      left: 50%;
+
+      display: inline-block;
+
+      width: 50px;
+      height: 20px;
+      margin: -.5px -25px 0 -25px;
+
+      content: '';
+      transition: all .3s;
+      pointer-events: none;
+
+      opacity: 0;
+      background: rgba($blue, .7);
+
+      -webkit-clip-path: polygon(50% 50%, 0 0, 100% 0);
+              clip-path: polygon(50% 100%, 0 0, 100% 0);;
+    }
+    &:first-child {
+      &:after {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        right: 100%;
+        bottom: 0;
+        left: -9999px;
+
+        display: inline-block;
+
+        content: '';
+        pointer-events: none;
+
+        background: rgba($blue, .7);;
+      }
+    }
+    &:last-child {
+      &:after {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        right: -9999px;
+        bottom: 0;
+        left: 100%;
+
+        display: inline-block;
+
+        content: '';
+        pointer-events: none;
+
+        background: rgba($blue, .7);
+      }
+    }
+    &:hover,
+    &.active {
+      &:before {
+        top: 100%;
+
+        opacity: 1;
+      }
+    }
+    &.orange {
+      background: rgba($orange, .7);
+      &:before {
+        background: rgba($orange, .7);
+      }
+
+      &:first-child,
+      &:last-child {
+        &:after {
+          background: rgba($orange, .7);
+        }
+      }
+    }
+    &.violet {
+      background: rgba($violet, .7);
+      &:before {
+        background: rgba($violet, .7);
+      }
+      &:first-child,
+      &:last-child {
+        &:after {
+          background: rgba($violet, .7);
+        }
+      }
+    }
+  }
+}
+
+.cal-tabs {
+  .tab-item {
+    //
+  }
+}
+.tab-item-slider {
+  padding-bottom: 60px;
+  .owl-stage {
+    display: flex;
+
+    margin: 0 auto;
+
+    flex-flow: row wrap;
+    align-items: stretch;
+  }
+  .calendar-list-item {
+    min-height: 100%;
+  }
+  .owl-dots {
+    position: absolute;
+    z-index: 3;
+    bottom: 20px;
+    left: 0;
+
+    width: 100%;
+    height: 20px;
+
+    text-align: center;
+    .owl-dot {
+      width: 15px;
+      height: 15px;
+      margin: 0 5px;
+
+      opacity: .8;
+      border: 1px solid $orange-med;
+      border-radius: 50%;
+      outline: 0;
+      background: transparent;
+      &:first-child {
+        margin-left: auto;
+      }
+      &:last-child {
+        margin-right: auto;
+      }
+      &:hover,
+      &.active {
+        border-color: $green-light;
+        background: $green-light;
+      }
+      &:hover {
+        opacity: 1;
+      }
+      &:active,
+      &:focus,
+      &:hover {
+        outline: 0;
+      }
+    }
+  }
+  &:not(.active).owl-loaded {
+    position: absolute!important;
+  }
+}
+
+.calendar-list-item {
+  position: relative;
+  z-index: 2;
+
+  padding: 30px 10px 40px 10px;
+
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-shadow: $text-shadow;
+  &:before {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    display: inline-block;
+
+    content: '';
+
+    background: rgba(#29727d,.7);
+  }
+  .date-wrap {
+    margin-bottom: 25px;
+    padding-bottom: 30px;
+
+    background: url(../img/decor-title-white.png) no-repeat center bottom;
+    background-size: auto;
+    .year {
+      display: inline-block;
+
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    .date {
+      font-size: 50px;
+      font-weight: 500;
+
+      display: inline-block;
+
+      width: 100%;
+      margin-bottom: 15px;
+    }
+    .day {
+      display: inline-block;
+
+      width: 100%;
+    }
+  }
+
+  .label {
+    font-weight: bold;
+
+    display: inline-block;
+
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .title {
+    font-size: 21px;
+
+    display: inline-block;
+
+    width: 100%;
+  }
+  &.orange {
+    &:before {
+      background: rgba(#e76c47, .7);
+    }
+  }
+  &.violet {
+    &:before {
+      background: rgba(#c83d6e, .7);
+    }
+  }
+}
+
 
 
 
@@ -868,13 +1260,13 @@ footer {
 
 ///MEDIA
 
-@media (min-width: 1350px) {
+@media (min-width: 1500px) {
   .container {
     max-width: $width;
   }
 }
 
-@media (max-width: 1349px) {
+@media (max-width: 1500px) {
   .callback {
     width: 50px;
     height: 50px;
