--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -296,6 +296,25 @@ header {
       min-height: 100px;
     }
   }
+  .main-nav {
+    min-height: 100%;
+    //display: inline-block;
+    padding: 0;
+
+    align-self: stretch;
+  }
+  .lang-nav {
+    min-height: 100%;
+    //display: inline-block;
+
+    align-self: stretch;
+    a {
+      display: inline-block;
+      overflow: hidden;
+
+      width: 30px;
+    }
+  }
 }
 
 
@@ -340,6 +359,16 @@ header {
       text-shadow: rgba(255,255,255,.6) 0 3px 3px;
     }
   }
+}
+.logo-wrap {
+  display: flex;
+
+  text-align: center;
+
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
 }
 
 
@@ -391,19 +420,7 @@ nav {
 }
 
 
-.main-nav {
-  min-height: 100%;
-  //display: inline-block;
-  padding: 0;
 
-  align-self: stretch;
-}
-.lang-nav {
-  min-height: 100%;
-  //display: inline-block;
-
-  align-self: stretch;
-}
 
 .header--lang {
   display: inline-block;
@@ -438,6 +455,12 @@ nav {
            background-clip: text;
       text-shadow: rgba(255,255,255,.6) 0 3px 3px;
       &:hover {
+        color: transparent;
+        background-color: $orange-med;
+      }
+    }
+    &.current-lang {
+      a {
         color: transparent;
         background-color: $orange-med;
       }
@@ -580,7 +603,6 @@ nav {
   }
   .head-tel {
     //display: inline-block;
-
     width: 100%;
 
     //text-align: center;
@@ -615,8 +637,12 @@ article {
 }
 
 #introduction {
-  margin-bottom: 50px;
+  overflow: hidden;
+
+  width: 100%;
+  margin-bottom: 30px;
   padding-top: 3%;
+  padding-bottom: 20px;
 
   background: url(../img/bg-home-content.jpg) no-repeat center top;
   background-size: 100% auto;
@@ -684,6 +710,7 @@ article {
 .course-item {
   display: flex;
 
+  height: 100%;
   min-height: 100%;
 
   border: 1px solid #fff;
@@ -1112,6 +1139,8 @@ article {
       background-size: contain;
     }
     .label {
+      font-size: 16px;
+
       display: inline-block;
 
       width: 100%;
@@ -2305,7 +2334,7 @@ article {
 
   width: 100%;
   height: 500px;
-  max-height: 90vh;
+  //max-height: 90vh;
   //padding-top: 50%;
   .container {
     display: flex;
@@ -3288,7 +3317,20 @@ footer {
 .footer-slogan-wrap {
   position: relative;
 
+  display: flex;
+
   margin-bottom: 40px;
+
+  text-align: center;
+
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  .header-slogan,
+  .logo {
+    float: none;
+  }
   &:before {
     font-size: 12px;
 
@@ -3432,8 +3474,10 @@ footer {
   text-transform: uppercase;
 }
 
-
-
+///POPUP
+.modal-content {
+  padding: 40px 20px;
+}
 
 ///MEDIA
 
@@ -3495,7 +3539,107 @@ footer {
   }
 }
 
+@media (max-width: 1199px) {
+  .humb-toggle-switch {
+    display: block;
+  }
+  #mob_nav_overlay {
+    position: fixed;
+    z-index: 97;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    display: none;
+
+    background: rgba(#000, .6);
+  }
+  #mob_nav {
+    display: inline-block;
+    .head-tel {
+      display: none;
+    }
+  }
+  header {
+    .flex_row {
+      .lang-nav,
+      .main-nav {
+        display: none;
+      }
+    }
+  }
+  #introduction {
+    background-size: auto 50%;
+  }
+
+
+  .int-content {
+    .int-title {
+      font-size: 70px;
+      line-height: 1.1;
+      span {
+        font-size: 55px;
+      }
+    }
+  }
+  .course-item {
+    .course-title {
+      top: 0;
+      left: 60px;
+      .course-icon {
+        left: -60px;
+
+        width: 60px;
+      }
+      .course-type {
+        font-size: 29px;
+        line-height: 60px;
+
+        height: 60px;
+         > span {
+          font-size: 23px;
+
+          padding-top: 0;
+          padding-bottom: 3px;
+        }
+      }
+    }
+  }
+
+
+  .looper-item {
+    .more-link,
+    .btn {
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
+}
+
+
+
 @media (max-width: 991px) {
+  .section-title {
+    font-size: 35px;
+  }
+  .text-content {
+    h1 {
+      font-size: 35px;
+    }
+    h2,
+    h3 {
+      font-size: 25px;
+    }
+    h4,
+    h5,
+    h6 {
+      font-size: 21px;
+    }
+  }
+
+
+
   #mob_nav_overlay {
     position: fixed;
     z-index: 97;
@@ -3520,8 +3664,53 @@ footer {
       }
     }
   }
+  .int-content {
+    .int-title {
+      font-size: 60px;
+
+      span {
+        font-size: 45px;
+      }
+    }
+  }
+  .course-item {
+    .course-title {
+      .course-icon {
+        //
+      }
+      .course-type {
+        font-size: 23px;
+      }
+    }
 
 
+    &.courses-first {
+      box-shadow: $base-box-shadow;
+      &:before {
+        display: none;
+      }
+      .course-img {
+        min-height: 0;
+        padding-top: 60%;
+      }
+      .course-content-wrap {
+        padding-top: 80px;
+      }
+      .course-title {
+        top: 0;
+        right: 0;
+        left: 60px;
+
+        width: auto;
+        .course-icon {
+          //
+        }
+        .course-type {
+          font-size: 27px;
+        }
+      }
+    }
+  }
 
 
 
@@ -3544,7 +3733,20 @@ footer {
     }
   }
 }
+
+
+
+
 @media (max-width: 767px) {
+  .int-content {
+    .int-title {
+      font-size: 55px;
+
+      span {
+        font-size: 45px;
+      }
+    }
+  }
   .home-contacts--map {
     height: auto;
 
@@ -3558,6 +3760,74 @@ footer {
       width: 100%;
       height: 300px;
       max-height: 90vh;
+    }
+  }
+
+  .cal-tab-nav {
+    .tab-nav-item {
+      z-index: 2;
+
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+      .icon {
+        position: relative;
+        z-index: 3;
+        //top: 20px;
+
+        float: left;
+
+        margin: 0;
+      }
+      .label {
+        float: left;
+
+        margin-bottom: 10px;
+      }
+      .title {
+        position: relative;
+        z-index: 3;
+
+        float: left;
+
+        width: calc(100% - 70px);
+        margin-bottom: 10px;
+        padding: 0 10px;
+      }
+      .days {
+        position: relative;
+        z-index: 3;
+      }
+      &:after {
+        display: none !important;
+      }
+
+      &:before {
+        z-index: 1;
+        top: 50%;
+        right: 0;
+        bottom: auto;
+        left: 0;
+
+        width: auto;
+        height: 0;
+        margin: 0;
+        //background: rgba(#000,.5)!important;
+
+        -webkit-clip-path: none;
+                clip-path: none;;
+      }
+      &.active,
+      &:hover {
+        &:before {
+          top: 0;
+          right: 0;
+          bottom: auto;
+          left: 0;
+
+          height: 100%;
+        }
+      }
     }
   }
 }
